Support TLS encryption for service access; Provide access endpoint as a readOnly property of managed services
