# modules/dynamic-apiserver/openapi.yaml
@@ -163,6 +163,8 @@ definitions:
         type: string
       version:
         type: string
+      tlsEnabled:
+        type: boolean
       domain:
         type: string
       volumeSize:
@@ -183,6 +185,10 @@ definitions:
         type: string
         readOnly: true
         format: date-time
+
+      endpoint:
+        type: string
+        readOnly: true
 
   Services:
     type: array
