# modules/dynamic-operator/controllers/kuberlogicservice-env/env.go
@@ -25,14 +25,20 @@ import (
 	v12 "k8s.io/apimachinery/pkg/apis/meta/v1"
 	controllerruntime "sigs.k8s.io/controller-runtime"
 	"sigs.k8s.io/controller-runtime/pkg/client"
+	"strconv"
 )
 
-type Environment struct {
+type EnvironmentManager struct {
+	client.Client
+
 	NamespaceName string
+
+	kls *kuberlogiccomv1alpha1.KuberLogicService
+	ctx context.Context
 }
 
 // SetupEnv checks if KLS environment is present and creates it if it is not
-func SetupEnv(kls *kuberlogiccomv1alpha1.KuberLogicService, c client.Client, ctx context.Context) (*Environment, error) {
+func SetupEnv(kls *kuberlogiccomv1alpha1.KuberLogicService, c client.Client, ctx context.Context) (*EnvironmentManager, error) {
 	ns := getNamespace(kls)
 	if _, err := controllerruntime.CreateOrUpdate(ctx, c, ns, func() error {
 		return controllerruntime.SetControllerReference(kls, ns, c.Scheme())
@@ -49,9 +55,108 @@ func SetupEnv(kls *kuberlogiccomv1alpha1.KuberLogicService, c client.Client, ctx
 
 	// set namespace status field
 	kls.Status.Namespace = ns.GetName()
-	return &Environment{
+	return &EnvironmentManager{
+		Client: c,
+
 		NamespaceName: ns.GetName(),
+
+		kls: kls,
+		ctx: ctx,
 	}, nil
+}
+
+// ExposeService takes internal service name and creates an Ingress object exposing it to the outside
+func (e *EnvironmentManager) ExposeService(svcName string, provisionIngress bool) (string, error) {
+	// get service
+	svc := &v1.Service{
+		ObjectMeta: v12.ObjectMeta{
+			Name:      svcName,
+			Namespace: e.NamespaceName,
+		},
+	}
+	if err := e.Get(e.ctx, client.ObjectKeyFromObject(svc), svc); err != nil {
+		return "", errors.Wrapf(err, "error getting service %s/%s", e.NamespaceName, svcName)
+	}
+
+	if provisionIngress {
+		return e.syncIngress(svc)
+	}
+	return e.syncLoadBalancer(svc)
+}
+
+func (e *EnvironmentManager) syncLoadBalancer(svc *v1.Service) (string, error) {
+	port := svc.Spec.Ports[0].Port
+
+	var addr string
+	if len(svc.Spec.ExternalIPs) > 0 {
+		addr = svc.Spec.ExternalIPs[0]
+	} else if svc.Spec.LoadBalancerIP != "" {
+		addr = svc.Spec.LoadBalancerIP
+	} else if lbIngress := svc.Status.LoadBalancer.Ingress; len(lbIngress) > 0 {
+		addr = lbIngress[0].IP
+		port = lbIngress[0].Ports[0].Port
+	} else {
+		return "", nil
+	}
+	return addr + ":" + strconv.Itoa(int(port)), nil
+}
+
+//+kubebuilder:rbac:groups=networking.k8s.io,resources=ingresses,verbs=get;list;watch;create;update;patch;delete
+func (e *EnvironmentManager) syncIngress(svc *v1.Service) (string, error) {
+
+	ingress := &v13.Ingress{
+		ObjectMeta: v12.ObjectMeta{
+			Name:      e.kls.GetName(),
+			Namespace: e.NamespaceName,
+		},
+	}
+
+	if _, err := controllerruntime.CreateOrUpdate(e.ctx, e.Client, ingress, func() error {
+		if e.kls.TLSEnabled() {
+			ingress.Spec.TLS = []v13.IngressTLS{
+				{
+					Hosts: []string{e.kls.GetHost()},
+				},
+			}
+		}
+
+		pathType := v13.PathTypePrefix
+		ingress.Labels = envLabels(e.kls)
+
+		ingress.Spec.Rules = []v13.IngressRule{
+			{
+				Host: e.kls.GetHost(),
+				IngressRuleValue: v13.IngressRuleValue{HTTP: &v13.HTTPIngressRuleValue{
+					Paths: []v13.HTTPIngressPath{
+						{
+							Path:     "/",
+							PathType: &pathType,
+							Backend: v13.IngressBackend{
+								Service: &v13.IngressServiceBackend{
+									Name: svc.GetName(),
+									Port: v13.ServiceBackendPort{
+										Name: svc.Spec.Ports[0].Name,
+									},
+								},
+								Resource: nil,
+							},
+						},
+					},
+				}},
+			},
+		}
+
+		return controllerruntime.SetControllerReference(e.kls, ingress, e.Client.Scheme())
+	}); err != nil {
+		return "", errors.Wrap(err, "error syncing ingress")
+	}
+
+	proto := "http://"
+	if e.kls.TLSEnabled() {
+		proto = "https://"
+	}
+
+	return proto + e.kls.GetHost(), nil
 }
 
 func getNamespace(kls *kuberlogiccomv1alpha1.KuberLogicService) *v1.Namespace {
